# QNX_opencv

./: CMakeLists.txt  README.md  camera_capture_opencv.cpp  camera_wrapper.cpp  camera_wrapper.h  display.h  encoder.h  main.c
src/include/: camera_wrapper.h  display.h  encoder.h  isp.h
src/src/: display.cpp  encoder.c  isp.c  main.c
